// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar base 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar isLoading 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <p
          className="bx--skeleton__text bx--skeleton__heading page-title-bar-loading"
          style={
            Object {
              "width": "30%",
            }
          }
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with breadcrumb 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Type
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <span
                      className="bx--link"
                    >
                      Instance
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Type
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <span
                      className="bx--link"
                    >
                      Instance
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="bx--tabs"
            role="navigation"
            selected={0}
          >
            <div
              aria-label="listbox"
              className="bx--tabs-trigger"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <a
                className="bx--tabs-trigger-text"
                href="#"
                onClick={[Function]}
                tabIndex={-1}
              >
                Tab 1
              </a>
              <svg
                aria-hidden={true}
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  show menu options
                </title>
              </svg>
            </div>
            <ul
              className="bx--tabs__nav bx--tabs__nav--hidden"
              role="tablist"
            >
              <li
                aria-controls="undefined__panel"
                aria-selected={true}
                className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={0}
                >
                  Tab 1
                </a>
              </li>
              <li
                aria-controls="undefined__panel"
                aria-selected={false}
                className="bx--tabs__nav-item"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={-1}
                >
                  Tab 2
                </a>
              </li>
              <li
                aria-controls="undefined__panel"
                aria-selected={false}
                className="bx--tabs__nav-item"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={-1}
                >
                  Tab 3
                </a>
              </li>
            </ul>
          </div>
          <div
            aria-hidden={false}
            className="bx--tab-content"
            hidden={false}
            role="tabpanel"
            selected={true}
          >
            <div>
              Content for first tab.
            </div>
          </div>
          <div
            aria-hidden={true}
            className="bx--tab-content"
            hidden={true}
            role="tabpanel"
            selected={false}
          >
            <div>
              Content for second tab.
            </div>
          </div>
          <div
            aria-hidden={true}
            className="bx--tab-content"
            hidden={true}
            role="tabpanel"
            selected={false}
          >
            <div>
              Content for third tab.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with description 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
              </div>
            </div>
            <p
              className="page-title-bar-description"
            >
              Descriptive text about this page and what the user can or should do on it
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with editable title bar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
                <button
                  className="page-title-bar-title--edit iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="bx--assistive-text"
                  >
                    Edit page title
                  </span>
                  <svg
                    aria-hidden="true"
                    aria-label="Edit page title"
                    className="bx--btn__icon"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <p
              className="page-title-bar-description"
            >
              Descriptive text about this page and what the user can or should do on it
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with everything 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Type
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <span
                      className="bx--link"
                    >
                      Instance
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
                <button
                  className="page-title-bar-title--edit iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="bx--assistive-text"
                  >
                    Edit page title
                  </span>
                  <svg
                    aria-hidden="true"
                    aria-label="Edit page title"
                    className="bx--btn__icon"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  Object {
                    "marginRight": "1rem",
                  }
                }
              >
                <b>
                  Last updated:
                </b>
                 yesterday
              </span>
              <button
                className="some-right-content iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Take an action
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="bx--tabs"
            role="navigation"
            selected={0}
          >
            <div
              aria-label="listbox"
              className="bx--tabs-trigger"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <a
                className="bx--tabs-trigger-text"
                href="#"
                onClick={[Function]}
                tabIndex={-1}
              >
                Tab 1
              </a>
              <svg
                aria-hidden={true}
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  show menu options
                </title>
              </svg>
            </div>
            <ul
              className="bx--tabs__nav bx--tabs__nav--hidden"
              role="tablist"
            >
              <li
                aria-controls="undefined__panel"
                aria-selected={true}
                className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={0}
                >
                  Tab 1
                </a>
              </li>
              <li
                aria-controls="undefined__panel"
                aria-selected={false}
                className="bx--tabs__nav-item"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={-1}
                >
                  Tab 2
                </a>
              </li>
              <li
                aria-controls="undefined__panel"
                aria-selected={false}
                className="bx--tabs__nav-item"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                <a
                  className="bx--tabs__nav-link"
                  href="#"
                  tabIndex={-1}
                >
                  Tab 3
                </a>
              </li>
            </ul>
          </div>
          <div
            aria-hidden={false}
            className="bx--tab-content"
            hidden={false}
            role="tabpanel"
            selected={true}
          >
            <div>
              Content for first tab.
            </div>
          </div>
          <div
            aria-hidden={true}
            className="bx--tab-content"
            hidden={true}
            role="tabpanel"
            selected={false}
          >
            <div>
              Content for second tab.
            </div>
          </div>
          <div
            aria-hidden={true}
            className="bx--tab-content"
            hidden={true}
            role="tabpanel"
            selected={false}
          >
            <div>
              Content for third tab.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with rich content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  Object {
                    "marginRight": "1rem",
                  }
                }
              >
                <b>
                  Last updated:
                </b>
                 yesterday
              </span>
              <button
                className="some-right-content iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Take an action
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageTitleBar with tooltip description with node 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link"
                      href="/"
                    >
                      Type
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <span
                      className="bx--link"
                    >
                      Instance
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  Page title
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
